<resources>
    <string name="app_name">HealthBuddy</string>
    <string name="online_pharmacy">Health Buddy</string>
    <string name="hint">Search for Medical,Doctors,Lab Tests</string>
    <string name="shop_by_category">Shop By Category</string>
    <string name="popular_products">Popular Products</string>
    <string name="consultation">Consultations</string>
    <string name="medicines">Medicines</string>
    <string name="lab_test">Lab Test</string>
    <string name="health">Health</string>
    <string name="omega_3">Omega 3</string>
    <string name="vitamins">Vitamins</string>
    <string name="multivitamins">Multivitamins</string>
    <string name="pils_90">90 Pils</string>
    <string name="final_price_100">Rs.100</string>
    <string name="price_120">Rs.120</string>
    <string name="test">Test</string>
    <string name="product_detail">Product Detail</string>
    <string name="info_detail">Medicines are chemicals or compounds used to cure, halt, or prevent disease; ease symptoms; or help in the diagnosis of illnesses. Advances in medicines have enabled doctors to cure many diseases and save lives</string>
    <string name="add_to_basket">Add to Basket</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>


</resources>