<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color9"
    tools:context=".shop.shopdetail">

    <ImageButton
        android:id="@+id/image_btn_arrow_shop_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="6dp"
        android:background="@null"
        android:foreground="?attr/selectableItemBackground"
        android:src="@drawable/ic_baseline_arrow_back_24" />
    <ImageButton
        android:id="@+id/image_shopping_shop_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_baseline_add_shopping_cart_24"
        android:foreground="?attr/selectableItemBackground"
        android:background="@null"/>

    <ScrollView
        android:id="@+id/scroll_view_shop_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_btn_arrow_shop_detail">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_shop_detail"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:src="@drawable/medicine4" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_shop_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardBackgroundColor="@color/color9">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_name_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:text="Medicine Name:  "
                        android:textColor="@color/Black" />

                    <TextView
                        android:id="@+id/tv_name_product_shop_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:layout_toRightOf="@id/tv_name_back"
                        android:text="@string/multivitamins"
                        android:textColor="@color/Black"
                        tools:ignore="RelativeOverlap" />

                    <TextView
                        android:id="@+id/tv_pills_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_name_product_shop_detail"
                        android:text="Pils:  "
                        android:textColor="@color/Black" />

                    <TextView
                        android:id="@+id/tv_pills_product_shop_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_name_back"
                        android:layout_toRightOf="@id/tv_pills_back"
                        android:text="@string/pils_90"
                        android:textColor="@color/Black" />

                    <ImageButton
                        android:id="@+id/add_shop_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_margin="6dp"
                        android:background="@color/color8"
                        android:foreground="?attr/selectableItemBackground"
                        android:src="@drawable/ic_baseline_add_24"
                        app:tint="@color/white" />

                    <TextView
                        android:id="@+id/tv_can_shop_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/add_shop_detail"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_margin="6dp"
                        android:text="1"
                        android:textColor="@color/Black"
                        android:textSize="16dp" />

                    <ImageButton
                        android:id="@+id/remove_shop_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_can_shop_detail"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_margin="6dp"
                        android:background="@color/color8"
                        android:foreground="?attr/selectableItemBackground"
                        android:src="@drawable/ic_baseline_remove_24"
                        app:tint="@color/white" />
                    <TextView
                        android:id="@+id/tv_product_info_back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_can_shop_detail"
                        android:layout_marginTop="6dp"
                        android:text="Description:  "
                        android:textColor="@color/Black" />


                    <TextView
                        android:id="@+id/tv_product_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_product_info_back"
                        android:layout_marginTop="6dp"
                        android:text="@string/info_detail"
                        android:textColor="@color/Black" />



                    <TextView
                        android:id="@+id/tv_final_price_product_shop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_product_info"
                        android:layout_marginStart="6dp"
                        android:layout_marginTop="6dp"
                        android:layout_marginEnd="0dp"
                        android:layout_marginBottom="6dp"
                        android:text="@string/final_price_100"
                        android:textColor="@color/Black" />

                    <TextView
                        android:id="@+id/tv_price_product"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_product_info"
                        android:layout_margin="6dp"
                        android:layout_toRightOf="@id/tv_final_price_product_shop"
                        android:text="@string/price_120" />

                    <Button
                        android:id="@+id/add_to_basket"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_price_product"
                        android:layout_margin="16dp"
                        android:foreground="?attr/selectableItemBackground"
                        android:text="@string/add_to_basket"
                        app:icon="@drawable/ic_baseline_add_shopping_cart_24" />
                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>